New entries should be added at the top

2004-11-18 backend_gtk.py: change so that the backend knows about all image
           formats and does not need to use IMAGE_FORMAT in other backends - SC

2004-11-18 Fixed some report_error bugs in string interpolation as
           reported on SF bug tracker- JDH
 
2004-11-17 backend_gtkcairo.py: change so all print_figure() calls render using
           Cairo and get saved using backend_gtk.print_figure() - SC

2004-11-13 backend_cairo.py: Discovered the magic number (96) required for
	   Cairo PS plots to come out the right size. Restored Cairo PS output
	   and added support for landscape mode	- SC

2004-11-13 Added ishold - JDH

2004-11-12 Added many new matlab colormaps - autumn bone cool copper
      flag gray hot hsv jet pink prism spring summer winter - PG

2004-11-11 greatly simplify the emitted postscript code - JV

2004-11-12 Added new plotting functions spy, spy2 for sparse matrix
           visualization - JDH

2004-11-11 Added rgrids, thetragrids for customizing the grid
           locations and labels for polar plots - JDH

2004-11-11 make the Gtk backends build without an X-server connection - JV

2004-11-10 matplotlib/__init__.py: Added FROZEN to signal we are running under
           py2exe (or similar) - is used by backend_gtk.py - SC

2004-11-09 backend_gtk.py: Made fix suggested by maffew@cat.org.au
	   to prevent problems when py2exe calls pygtk.require(). - SC

2004-11-09 backend_cairo.py: Added support for printing to a fileobject.
           Disabled cairo PS output which is not working correctly. - SC

==============================================================
2004-11-08 matplotlib-0.64 released

2004-11-04 Changed -dbackend processing to only use known backends, so
           we don't clobber other non-matplotlib uses of -d, like -debug.

2004-11-04 backend_agg.py: added IMAGE_FORMAT to list the formats that the 
           backend can save to.